tests/machine/x/scala/map_nested_assign.scala
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:41:17Z
object map_nested_assign {
  case class Data(outer: )
  case class Data1(inner: Int)

  def main(args: Array[String]): Unit = {
    var data = scala.collection.mutable.Map("outer" -> Map("inner" -> 1))
    val _tmp0 = data("outer").updated("inner", 2)
    data = data.updated("outer", _tmp0)
    println(((data).apply("outer")).apply("inner"))
  }
}
